// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectList Render tab component with correct length, data and styles 1`] = `
.c3 {
  color: #B4B4B4;
  padding: 1.25rem;
  display: block;
  background: #1C2125;
  border: 1px solid #404040;
  border-radius: 0.375rem;
  border-top-left-radius: 0;
  margin-top: -1px;
}

.c4 {
  list-style: none;
  padding: 0;
}

.c5 {
  list-style: none;
  padding: 0 0 1.625rem 1.25rem;
  border-left: 1px solid #FFF;
  position: relative;
  margin-left: 0.625rem;
  font-size: 1rem;
}

.c5:last-child {
  border: 0;
  padding-bottom: 0;
}

.c5:before {
  content: '';
  width: 1rem;
  height: 1rem;
  background: #FFF;
  border-radius: 50%;
  position: absolute;
  left: -0.5rem;
  top: 0;
}

.c5:last-of-type > div {
  line-height: 1rem;
}

.c8 {
  list-style: none;
  padding: 0 0 1.625rem 1.25rem;
  border-left: 1px solid #FFF;
  position: relative;
  margin-left: 0.625rem;
  font-size: 1rem;
}

.c8:last-child {
  border: 0;
  padding-bottom: 0;
}

.c8:before {
  content: '';
  width: 1rem;
  height: 1rem;
  background: #FFF;
  border-radius: 50%;
  position: absolute;
  left: -0.5rem;
  top: 0;
}

.c8:last-child:before {
  background-color: #FFF;
}

.c8:last-of-type > div {
  line-height: 1rem;
}

.c6 {
  line-height: 1rem;
  margin-bottom: 0.25rem;
}

.c7 {
  color: #B4B4B4;
  line-height: 1.375rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
}

.c2 {
  cursor: pointer;
  color: #B4B4B4;
  padding: 0.375rem 0.375rem;
  text-align: center;
  margin-right: 0.25rem;
  background: #1C2125;
  border-radius: 0.375rem 0.375rem 0 0;
  border: 1px solid #404040;
  border-bottom: none;
}

.c2:nth-child(1) {
  border-bottom: 1px solid #00A8E8;
  z-index: 1;
}

.c2:last-child {
  margin-right: 0;
}

@media (max-width:760px) {
  .c5:before {
    width: 0.875rem;
    height: 0.875rem;
    left: -0.4375rem;
  }
}

@media (max-width:760px) {
  .c8:before {
    width: 0.875rem;
    height: 0.875rem;
    left: -0.4375rem;
  }
}

<div
  class="c0"
  data-testid="tabs-container"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c2"
    />
  </div>
  <div
    class="c3"
    type="swap"
  >
    <ul
      class="c4"
    >
      <li
        class="c5"
      >
        <div
          class="c6"
        >
          Swap Request Validation (
          2
          /2)
        </div>
        <div
          class="c7"
        >
          Your Swap request successfully validated.
        </div>
      </li>
      <li
        class="c5"
      >
        <div
          class="c6"
        >
          Conversion 
           
          GLMRBUSD
        </div>
        <div
          class="c7"
        >
          Type: 
          BUY
        </div>
        <div
          class="c7"
        >
          Pair: 
          GLMRBUSD
        </div>
        <div
          class="c7"
        >
          Quantity: 
          24
        </div>
        <div
          class="c7"
        >
          Price: 
          0.8503
        </div>
        <div
          class="c7"
        >
          Time: 
          10/06/2022 09:40:54
        </div>
      </li>
      <li
        class="c8"
        color="#FFF"
      >
        <div
          class="c7"
        >
          No valid operations spotted!
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`SelectList Render tab component with one tab 1`] = `
.c3 {
  color: #B4B4B4;
  padding: 1.25rem;
  display: block;
  background: #1C2125;
  border: 1px solid #404040;
  border-radius: 0.375rem;
  border-top-left-radius: 0;
  margin-top: -1px;
}

.c4 {
  list-style: none;
  padding: 0;
}

.c5 {
  list-style: none;
  padding: 0 0 1.625rem 1.25rem;
  border-left: 1px solid #FFF;
  position: relative;
  margin-left: 0.625rem;
  font-size: 1rem;
}

.c5:last-child {
  border: 0;
  padding-bottom: 0;
}

.c5:before {
  content: '';
  width: 1rem;
  height: 1rem;
  background: #FFF;
  border-radius: 50%;
  position: absolute;
  left: -0.5rem;
  top: 0;
}

.c5:last-of-type > div {
  line-height: 1rem;
}

.c8 {
  list-style: none;
  padding: 0 0 1.625rem 1.25rem;
  border-left: 1px solid #FFF;
  position: relative;
  margin-left: 0.625rem;
  font-size: 1rem;
}

.c8:last-child {
  border: 0;
  padding-bottom: 0;
}

.c8:before {
  content: '';
  width: 1rem;
  height: 1rem;
  background: #FFF;
  border-radius: 50%;
  position: absolute;
  left: -0.5rem;
  top: 0;
}

.c8:last-child:before {
  background-color: #00A8E8;
}

.c8:last-of-type > div {
  line-height: 1rem;
}

.c6 {
  line-height: 1rem;
  margin-bottom: 0.25rem;
}

.c7 {
  color: #B4B4B4;
  line-height: 1.375rem;
}

.c9 {
  color: #00A8E8;
  line-height: 1.375rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
}

.c2 {
  cursor: pointer;
  color: #B4B4B4;
  padding: 0.375rem 0.375rem;
  text-align: center;
  margin-right: 0.25rem;
  background: #1C2125;
  border-radius: 0.375rem 0.375rem 0 0;
  border: 1px solid #404040;
  border-bottom: none;
}

.c2:nth-child(1) {
  border-bottom: 1px solid #00A8E8;
  z-index: 1;
}

.c2:last-child {
  margin-right: 0;
}

@media (max-width:760px) {
  .c5:before {
    width: 0.875rem;
    height: 0.875rem;
    left: -0.4375rem;
  }
}

@media (max-width:760px) {
  .c8:before {
    width: 0.875rem;
    height: 0.875rem;
    left: -0.4375rem;
  }
}

<div
  class="c0"
  data-testid="tabs-container"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <div
    class="c3"
    type="swap"
  >
    <ul
      class="c4"
    >
      <li
        class="c5"
      >
        <div
          class="c6"
        >
          Swap Request Validation (
          1
          /2)
        </div>
        <div
          class="c7"
        >
          Your Swap request is under validation. Please wait until full confirmation.
        </div>
      </li>
      <li
        class="c5"
      >
        <div
          class="c6"
        >
          Conversion 
           
          GLMRBUSD
        </div>
        <div
          class="c7"
        >
          Type: 
          BUY
        </div>
        <div
          class="c7"
        >
          Pair: 
          GLMRBUSD
        </div>
        <div
          class="c7"
        >
          Quantity: 
          24
        </div>
        <div
          class="c7"
        >
          Price: 
          0.8503
        </div>
        <div
          class="c7"
        >
          Time: 
          10/06/2022 09:40:54
        </div>
      </li>
      <li
        class="c8"
        color="#00A8E8"
      >
        <div
          class="c9"
          color="#00A8E8"
        >
          Successful swap!
        </div>
      </li>
    </ul>
  </div>
</div>
`;
